[gd_scene format=3 uid="uid://c32kl132hi4oc"]

[ext_resource type="Script" uid="uid://b3ovmbvchihww" path="res://systems/systems_enemy/shadow_swarm.gd" id="1_tahxh"]
[ext_resource type="Texture2D" uid="uid://cu8l8ofntq625" path="res://systems/sprites/particles_darkmatter-sheet.png" id="2_e0tyt"]

[sub_resource type="Gradient" id="Gradient_fcj4x"]
offsets = PackedFloat32Array(0.77729255, 0.9170306, 1)
colors = PackedColorArray(0.18431373, 0.16078432, 0.16078432, 1, 0.18431373, 0.16078432, 0.16078432, 0.60784316, 0.18431373, 0.16078432, 0.16078432, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7t0e3"]
gradient = SubResource("Gradient_fcj4x")
width = 256

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_e0tyt"]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Gradient" id="Gradient_a0iv0"]
interpolation_mode = 2
interpolation_color_space = 2
offsets = PackedFloat32Array(0, 0.16058394, 0.39781022, 0.879562, 1)
colors = PackedColorArray(0.18431373, 0.16078432, 0.16078432, 0, 1, 1, 1, 0.60784316, 1.0928655, 1.0962311, 1.0962563, 1.0744846, 1, 1, 1, 0.9005626, 0.18431373, 0.16078432, 0.16078432, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_s03do"]
gradient = SubResource("Gradient_a0iv0")
use_hdr = true

[sub_resource type="Curve" id="Curve_tbchn"]
_data = [Vector2(0, 0.22598106), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_k636s"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.23477668), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_ncbk8"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_lhqvp"]
curve_x = SubResource("Curve_tbchn")
curve_y = SubResource("Curve_k636s")
curve_z = SubResource("Curve_ncbk8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ncbk8"]
particle_flag_rotate_y = true
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 12.0
direction = Vector3(45, 0, 0)
directional_velocity_min = 1.0
directional_velocity_max = 1.0
directional_velocity_curve = SubResource("CurveXYZTexture_lhqvp")
gravity = Vector3(25, 0, 0)
linear_accel_min = 22.699997
linear_accel_max = 99.99999
scale_max = 2.0
color_ramp = SubResource("GradientTexture1D_s03do")

[sub_resource type="Animation" id="Animation_bylbt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 3.612)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ShadowArea2D/shadow_collision:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_tahxh"]
resource_name = "dark_spread_down"
length = 60.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 60),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 3.612), Vector2(1, 19.932001)]
}

[sub_resource type="Animation" id="Animation_fcj4x"]
resource_name = "dark_spread_right"
length = 60.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 59.933334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 3.612), Vector2(7.6, 3.612)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../ShadowArea2D/shadow_collision:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 60),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(14.280002, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bylbt"]
_data = {
&"RESET": SubResource("Animation_bylbt"),
&"dark_spread_down": SubResource("Animation_tahxh"),
&"dark_spread_right": SubResource("Animation_fcj4x")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4lcr5"]
size = Vector2(208.62044, 64.0919)

[node name="Dark_Swarm" type="Node2D" unique_id=957464448]
light_mask = 0
script = ExtResource("1_tahxh")
shadow_spread_speed = 2.5

[node name="Dark_Swarm" type="TextureRect" parent="." unique_id=2061939647]
light_mask = 0
z_index = 1
offset_left = -122.0
offset_top = -114.99999
offset_right = 134.0
offset_bottom = -50.999992
rotation = 6.2831855
scale = Vector2(1, 3.612)
texture = SubResource("GradientTexture2D_7t0e3")
metadata/_edit_use_anchors_ = true

[node name="dark_swarm_particle" type="GPUParticles2D" parent="Dark_Swarm" unique_id=804414368]
material = SubResource("CanvasItemMaterial_e0tyt")
position = Vector2(305.00003, 31.838295)
emitting = false
amount = 4
texture = ExtResource("2_e0tyt")
lifetime = 6.0
speed_scale = 0.15
process_material = SubResource("ParticleProcessMaterial_ncbk8")

[node name="Dark_AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1249008317]
root_node = NodePath("../Dark_Swarm")
libraries/ = SubResource("AnimationLibrary_bylbt")

[node name="ShadowArea2D" type="Area2D" parent="." unique_id=1692827122]
position = Vector2(0, 7.6293945e-06)
scale = Vector2(1, 3.612)

[node name="shadow_collision" type="CollisionShape2D" parent="ShadowArea2D" unique_id=256238141]
position = Vector2(-18.310219, -2.1122355e-06)
shape = SubResource("RectangleShape2D_4lcr5")
